--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+  			<groupId>com.aliyun.openservices</groupId>
+  			<artifactId>aliyun-sls</artifactId>
+  			<version>0.5.0</version>        
+        </dependency>        
 
         <dependency>
             <groupId>commons-beanutils</groupId>
