--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sls-loghub-client-inner</artifactId>
 	<packaging>jar</packaging>
 	<name>LogHub Client Library for Java</name>
-	<version>0.1.3</version>
+	<version>0.2</version>
 	<description>The LogHub client Library</description>
 	<url></url>
 
@@ -43,8 +43,8 @@
 
 		<dependency>
 			<groupId>com.aliyun.openservices</groupId>
-			<artifactId>aliyun-sls-v0.6-test-inner</artifactId>
-			<version>0.1.7</version>
+			<artifactId>aliyun-sls-v0.6-inner-test</artifactId>
+			<version>0.1.9</version>
 		</dependency>
 
 		<dependency>
