--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.aliyun</groupId>
-	<artifactId>sls-loghub-client-inner</artifactId>
+	<groupId>com.aliyun.openservices</groupId>
+	<artifactId>loghub-client-lib</artifactId>
 	<packaging>jar</packaging>
 	<name>LogHub Client Library for Java</name>
-	<version>0.2.6</version>
+	<version>0.6.5</version>
 	<description>The LogHub client Library</description>
-	<url></url>
 
 
 
-	<licenses>
-		<license>
-			<name></name>
-			<url></url>
-			<distribution></distribution>
-		</license>
-	</licenses>
-
-
+    <licenses>
+        <license>
+            <name></name>
+            <url></url>
+            <distribution>repo</distribution>
+            <comments>Copyright (C) Alibaba Cloud Computing. All rights reserved.</comments>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url></url>
+        <connection></connection>
+    </scm>
+    <developers>
+        <developer>
+            <id>aliyunproducts</id>
+            <name>Aliyun Log development team</name>
+            <email>aliyunsdk@aliyun.com</email>
+        </developer>
+    </developers>
 
 	<dependencies>
 		<dependency>
@@ -28,94 +38,56 @@
 			<version>1.2.7</version>
 		</dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.35</version>
-		</dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>com.aliyun.openservices</groupId>
-			<artifactId>aliyun-sls-v0.6-inner</artifactId>
-			<version>0.2.8</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.4</version>
-			<classifier>jdk15</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-validator</groupId>
-			<artifactId>commons-validator</artifactId>
-			<version>1.4.0</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sf.ezmorph</groupId>
-			<artifactId>ezmorph</artifactId>
-			<version>1.0.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>2.5.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.5</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.jpountz.lz4</groupId>
-			<artifactId>lz4</artifactId>
-			<version>1.3.0</version>
+			<artifactId>aliyun-log</artifactId>
+			<version>0.6.6</version>
 		</dependency>
 	</dependencies>
 
-	<developers>
-		<developer>
-			<id>aliyun_dev</id>
-			<organization>aliyun.com</organization>
-			<organizationUrl>http://aliyun.com</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-		</developer>
-	</developers>
-
+       <distributionManagement>
+    <snapshotRepository>
+        <id>sonatype-nexus-snapshots</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+        <id>sonatype-nexus-staging</id>
+        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    </distributionManagement>
+    
+	
 	<build>
 		<plugins>
+                <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+            <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                 <goals>
+                     <goal>sign</goal>
+                 </goals>
+            </execution>
+        </executions>
+ </plugin>
+ 
+  <plugin>
+     <groupId>org.sonatype.plugins</groupId>
+      <artifactId>nexus-staging-maven-plugin</artifactId>
+      <version>1.6.3</version>
+          <extensions>true</extensions>
+          <configuration>
+              <serverId>sonatype-nexus-staging</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+      </configuration>
+ </plugin>
+ 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
@@ -125,11 +97,36 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+            
+            
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-source-plugin</artifactId>
+    <version>2.2.1</version>
+    <configuration>
+      <forceCreation>true</forceCreation>
+      <excludes>
+        <exclude>com/aliyun/openservices/</exclude>
+        </excludes>
+    </configuration>
+    <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+    </executions>
+  </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
+					<excludes>
+						<exclude>**/oms/**</exclude>
+						<exclude>**/odps/**</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -138,21 +135,39 @@
 				<version>2.9</version>
 				<configuration>
 					<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
-						-Dfile.encoding=UTF-8
-					</argLine>
+						-Dfile.encoding=UTF-8</argLine>
+					<excludes>
+						<exclude>**/odps/**</exclude>
+						<exclude>**/oms/**</exclude>
+					</excludes>
 					<forkMode>once</forkMode>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
+            
+                  <plugin> 
+        <groupId>org.apache.maven.plugins</groupId>  
+        <artifactId>maven-javadoc-plugin</artifactId>  
+        <version>2.8</version>  
+        <configuration> 
+          <encoding>UTF-8</encoding>  
+         
+          <tags> 
+            <tag> 
+              <name>author</name>  
+              <placement>X</placement> 
+            </tag> 
+          </tags> 
+        </configuration>  
+        <executions> 
+          <execution> 
+            <phase>package</phase>  
+            <goals> 
+              <goal>jar</goal> 
+            </goals> 
+          </execution> 
+        </executions> 
+      </plugin>  
 		</plugins>
 	</build>
-
+    <url>http://www.aliyun.com</url>
 </project>
