--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>loghub-client-lib</artifactId>
 	<packaging>jar</packaging>
 	<name>LogHub Client Library for Java</name>
-	<version>0.6.7</version>
+	<version>0.6.8</version>
 	<description>The LogHub client Library</description>
 
 
@@ -43,131 +43,132 @@
 		<dependency>
 			<groupId>com.aliyun.openservices</groupId>
 			<artifactId>aliyun-log</artifactId>
-			<version>0.6.6</version>
+			<version>0.6.7</version>
 		</dependency>
 	</dependencies>
 
-       <distributionManagement>
-    <snapshotRepository>
-        <id>sonatype-nexus-snapshots</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-        <id>sonatype-nexus-staging</id>
-        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
-    
-	
-	<build>
-		<plugins>
-                <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
-        <executions>
-            <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                 <goals>
-                     <goal>sign</goal>
-                 </goals>
-            </execution>
-        </executions>
- </plugin>
- 
-  <plugin>
-     <groupId>org.sonatype.plugins</groupId>
-      <artifactId>nexus-staging-maven-plugin</artifactId>
-      <version>1.6.3</version>
-          <extensions>true</extensions>
-          <configuration>
-              <serverId>sonatype-nexus-staging</serverId>
-              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>true</autoReleaseAfterClose>
-      </configuration>
- </plugin>
- 
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-            
-            
-      <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-source-plugin</artifactId>
-    <version>2.2.1</version>
-    <configuration>
-      <forceCreation>true</forceCreation>
-      <excludes>
-        <exclude>com/aliyun/openservices/</exclude>
-        </excludes>
-    </configuration>
-    <executions>
-                <execution>
-                    <id>attach-sources</id>
-                    <goals>
-                        <goal>jar</goal>
-                    </goals>
-                </execution>
-    </executions>
-  </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<excludes>
-						<exclude>**/oms/**</exclude>
-						<exclude>**/odps/**</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
-						-Dfile.encoding=UTF-8</argLine>
-					<excludes>
-						<exclude>**/odps/**</exclude>
-						<exclude>**/oms/**</exclude>
-					</excludes>
-					<forkMode>once</forkMode>
-				</configuration>
-			</plugin>
-            
-                  <plugin> 
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-javadoc-plugin</artifactId>  
-        <version>2.8</version>  
-        <configuration> 
-          <encoding>UTF-8</encoding>  
-         
-          <tags> 
-            <tag> 
-              <name>author</name>  
-              <placement>X</placement> 
-            </tag> 
-          </tags> 
-        </configuration>  
-        <executions> 
-          <execution> 
-            <phase>package</phase>  
-            <goals> 
-              <goal>jar</goal> 
-            </goals> 
-          </execution> 
-        </executions> 
-      </plugin>  
-		</plugins>
-	</build>
+
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <forceCreation>true</forceCreation>
+                    <excludes>
+                        <exclude>com/aliyun/openservices/</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/oms/**</exclude>
+                        <exclude>**/odps/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
+                        -Dfile.encoding=UTF-8</argLine>
+                    <excludes>
+                        <exclude>**/odps/**</exclude>
+                        <exclude>**/oms/**</exclude>
+                    </excludes>
+                    <forkMode>once</forkMode>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <excludePackageNames>com.aliyun.openservices.log.http.*</excludePackageNames>
+                    <tags>
+                        <tag>
+                            <name>author</name>
+                            <placement>X</placement>
+                        </tag>
+                    </tags>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <url>http://www.aliyun.com</url>
 </project>
