--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.aliyun.openservices</groupId>
     <artifactId>loghub-client-lib</artifactId>
-    <version>0.6.14</version>
+    <version>0.6.15-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>LogHub Client Library for Java</name>
