--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.aliyun.openservices</groupId>
     <artifactId>loghub-client-lib</artifactId>
-    <version>0.6.16</version>
+    <version>0.6.17-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Aliyun LOG Java Consumer</name>
