--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.aliyun.openservices</groupId>
     <artifactId>loghub-client-lib</artifactId>
-    <version>0.6.43</version>
+    <version>0.6.44</version>
     <packaging>jar</packaging>
 
     <name>Aliyun LOG Java Consumer</name>
@@ -18,10 +18,8 @@
     <description>Aliyun LOG Java Consumer</description>
     <licenses>
         <license>
-            <name/>
-            <url/>
-            <distribution>repo</distribution>
-            <comments>Copyright (C) Alibaba Cloud Computing. All rights reserved.</comments>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
     <scm>
